syntax = "proto3";

package com.chicago.dto;

option java_package = "com.chicago.dto";

enum OperationType
{
    INCOMING = 0;
    OUTGOING = 1;
}

enum TransferState
{
    PENDING = 0;
    ACCEPTED = 1;
    REJECTED = 2;
}

message InventoryOperation
{
    string inventory_id = 1;
    OperationType operation_type = 2;
    string item_id = 3;
    int32 quantity = 4;
    float amount = 5;
}

message InventoryTransfer
{
    string inventory_from_id = 1;
    string inventory_to_id = 2;
    string item_id = 3;
    int32 quantity = 4;
    float amount = 5;
    TransferState transfer_state = 6;
}

message InventoryPosition
{
    string inventory_id = 1;
    string item_id = 2;
    int32 quantity = 3;
    float amount = 4;
    string item_name = 5;
    bytes item_image = 6;
    string description = 7;
}

message InventoryItem
{
    string entity_id = 1;
    string item_id = 2;
    string location_id = 3;
    int32 item_quantity = 4;
    float item_amount = 5;
    string item_name = 6;
    bytes item_image = 7;
    string description = 8;
}

message InventoryItemCategory
{
    string entity_id = 1;
    string category_name = 2;
    string category_id = 3;
}

message InventoryItemCategories
{
    string entity_id = 1;
    map<string, string> categories = 2;
}

message InventoryItemBrand
{
    string entity_id = 1;
    string brand_name = 2;
    string brand_id = 3;
}

message InventoryItemBrands
{
    string entity_id = 1;
    map<string, string> brands = 2;
}

message InventoryItemMeasurement
{
    string entity_id = 1;
    string measurement_name = 2;
    string measurement_id = 3;
}

message InventoryItemMeasurements
{
    string entity_id = 1;
    map<string, string> measurements = 2;
}
