syntax = "proto3";

package com.chicago.dto;

option java_package = "com.chicago.dto";

message Position
{
    string organization_id = 1;
    string position_id = 2;
    string description = 3;
}

